--- a/src/style/Projects.css
+++ b/src/style/Projects.css
@@ -4,8 +4,7 @@
   justify-content: center;
   align-items: center;
   background: url('../images/lightmode-bg2.svg');
-  background-repeat: repeat;
-  background-position: center top;
+  background-position: top;
   padding-top: 8rem;
 }
 
